Bug 183887 - importing photos first time and crashed
Summary: importing photos first time and crashed
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Scan (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-10 08:17 UTC by skeil
Modified: 2017-07-26 06:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skeil 2009-02-10 08:17:15 UTC
Version:           0.1.0 (using KDE 4.2.0)
Compiler:           followed this http://wiki.kde.org/tiki-index.php?page=Digikam+Compilation+on+Kubuntu+Intrepid
OS:                Linux
Installed from:    Ubuntu Packages

first start up. defined different folder to import from - another hard disk via media. after some time it crashed. did start up again ok
sorry very new to this. but here is the error message
6 (sigabrt)
Application: digiKam (digikam), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb49b7960 (LWP 29633)]
[New Thread 0xb345fb90 (LWP 29634)]

[KCrash handler]
#6 0xb7f56430 in __kernel_vsyscall ()
#7 0xb50bc880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8 0xb50be248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9 0xb67ae795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb67ae872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb67ae915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb7de438d in Digikam::AlbumDB::addImageInformation (this=0x9186760, 
imageID=53114, infos=@0xb345ef20, fields={i = -1287262444})
at /home/skeil/down/svn/graphics/digikam/libs/database/albumdb.cpp:1130
#13 0xb7dfe829 in Digikam::ImageScanner::scanVideoFile (this=0xb345efb4)
at /home/skeil/down/svn/graphics/digikam/libs/database/imagescanner.cpp:559
#14 0xb7e00edd in Digikam::ImageScanner::scanFile (this=0xb345efb4)
at /home/skeil/down/svn/graphics/digikam/libs/database/imagescanner.cpp:161
#15 0xb7e01f06 in Digikam::ImageScanner::newFile (this=0xb345efb4, 
albumId=1205)
at /home/skeil/down/svn/graphics/digikam/libs/database/imagescanner.cpp:92
#16 0xb7df32d7 in Digikam::CollectionScanner::scanNewFile (this=0xb345f368, 
info=@0xaff66d94, albumId=1205)
at /home/skeil/down/svn/graphics/digikam/libs/database/collectionscanner.cpp:592
#17 0xb7df60f6 in Digikam::CollectionScanner::scanAlbum (this=0xb345f368, 
location=@0x93ff788, album=@0xb345f19c)
at /home/skeil/down/svn/graphics/digikam/libs/database/collectionscanner.cpp:545
#18 0xb7df6405 in Digikam::CollectionScanner::scanAlbum (this=0xb345f368, 
location=@0x93ff788, album=@0xb345f2a4)
at /home/skeil/down/svn/graphics/digikam/libs/database/collectionscanner.cpp:556
#19 0xb7df694a in Digikam::CollectionScanner::scanAlbumRoot (this=0xb345f368, 
location=@0x93ff788)
at /home/skeil/down/svn/graphics/digikam/libs/database/collectionscanner.cpp:345
#20 0xb7df7224 in Digikam::CollectionScanner::completeScan (this=0xb345f368)
at /home/skeil/down/svn/graphics/digikam/libs/database/collectionscanner.cpp:192
#21 0x082d495b in Digikam::ScanController::run (this=0x9181378)
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:432
#22 0xb67b66ae in ?? () from /usr/lib/libQtCore.so.4
#23 0xb534650f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#24 0xb51727ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb49b7960 (LWP 29633)):
#0 0xb7f56430 in __kernel_vsyscall ()
#1 0xb534a075 in pthread_cond_wait@@GLIBC_2.3.2 ()
from /lib/tls/i686/cmov/libpthread.so.0
#2 0xb67b76f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3 0xb67b6853 in QThread::wait () from /usr/lib/libQtCore.so.4
#4 0x082d3732 in Digikam::ScanController::shutDown (this=0x9181378)
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:264
#5 0x082d389a in ~ScanController (this=0x9181378)
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:247
#6 0x082d6155 in ~ScanControllerCreator (this=0x9181378)
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:188
#7 0x082d39c2 in destroy ()
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:189
#8 0x0824afb1 in ~KCleanUpGlobalStatic (this=0x83bc1a8)
at /usr/include/kglobal.h:67
#9 0xb50bfd69 in exit () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5869d2b in ?? () from /usr/lib/libQtGui.so.4
#11 0xb6f884da in KApplication::xioErrhandler () from /usr/lib/libkdeui.so.5
#12 0xb6f88516 in ?? () from /usr/lib/libkdeui.so.5
#13 0xb61eb062 in _XIOError () from /usr/lib/libX11.so.6
#14 0xb61f3135 in ?? () from /usr/lib/libX11.so.6
#15 0xb61f3985 in _XEventsQueued () from /usr/lib/libX11.so.6
#16 0xb61db90f in XEventsQueued () from /usr/lib/libX11.so.6
#17 0xb58a40da in ?? () from /usr/lib/libQtGui.so.4
#18 0xb4d7a602 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#19 0xb4d7aa8a in ?? () from /usr/lib/libglib-2.0.so.0
#20 0xb4d7af61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#21 0xb68d1497 in QEventDispatcherGlib::processEvents ()
from /usr/lib/libQtCore.so.4
#22 0xb58a3ea5 in ?? () from /usr/lib/libQtGui.so.4
#23 0xb68a552a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#24 0xb68a56ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#25 0x082d3560 in Digikam::ScanController::completeCollectionScan (
this=0x9181378, splash=0x929a478)
at /home/skeil/down/svn/graphics/digikam/digikam/scancontroller.cpp:326
#26 0x0828d17d in DigikamApp (this=0x91264f8)
at /home/skeil/down/svn/graphics/digikam/digikam/digikamapp.cpp:164
#27 0x082fd966 in main (argc=4, argv=0xbfe589a4)
at /home/skeil/down/svn/graphics/digikam/digikam/main.cpp:167
#0 0xb7f56430 in __kernel_vsyscall ()
Comment 1 caulier.gilles 2009-02-10 08:40:07 UTC
Which version of digiKam you use ? Go to Help/About menu for more informations...

Gilles Caulier
Comment 2 Marcel Wiesweg 2009-02-10 17:22:39 UTC
I assume you compile from current SVN.

Can you reproduce the crash when you import the folder again?
It must be a video file causing this. The filename is probably printed on the console in the last lines before the assert hits.  

If you can reproduce, please open the file digikam/libs/database/albumdb.cpp and insert this into line 1130 (before the Q_ASSERT):

if (fieldNames.size()==infos.size()) kDebug() << "Assert hit:" << fieldNames << infos << fields << imageID;

I can't find a reason why the assertion should fail, but maybe I'm missing it.


Comment 3 Wolf Behrenhoff 2009-02-11 14:55:16 UTC
Hello,

I also have the same problem when trying to import all my photos from external disk. I can reproduce this bug. Using the current SVN version.

Marcel, I guess you wanted us to insert 
if (fieldNames.size()!=infos.size()) ...
insead of ... == ... ;-)

done that, result is:
digikam(19032) Digikam::AlbumDB::addImageInformation: Assert hit:  ("rating", "creationDate", "format") (QVariant(QString, "AVI") ) 67 32704

How do I find out which file causes this?
Comment 4 Marcel Wiesweg 2009-02-11 19:40:01 UTC
SVN commit 924830 by mwiesweg:

Silly me, the most stupid mistake. Must have been blind yesterday.

BUG: 183887

 M  +1 -1      imagescanner.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=924830