Silly me, the most stupid mistake. Must have been blind yesterday.

BUG: 183887

svn path=/trunk/extragear/graphics/digikam/; revision=924830